[gd_scene load_steps=6 format=3 uid="uid://bokv21e68434g"]

[ext_resource type="Script" path="res://main/user_interface/resource_bar.gd" id="1_d1ene"]
[ext_resource type="Texture2D" uid="uid://coci4aov6b3et" path="res://assets/sprites/UI/progress-bar-circle.png" id="2_t4vfd"]
[ext_resource type="Texture2D" uid="uid://dyyhr6dmkfkdr" path="res://assets/sprites/UI/progress-bar-frame.png" id="3_cvld6"]
[ext_resource type="Texture2D" uid="uid://dlevjajuvon3k" path="res://assets/sprites/icons/happiness_icon_atlas_texture.tres" id="4_vh8ym"]
[ext_resource type="FontFile" uid="uid://dbbd685dur5vv" path="res://assets/fonts/EquipmentPro.ttf" id="5_leyg0"]

[node name="HappinessBar" type="MarginContainer"]
script = ExtResource("1_d1ene")
modifier_name = "HappinessBar"

[node name="ResourceProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 2
max_value = 1000.0
value = 333.0
fill_mode = 4
nine_patch_stretch = true
stretch_margin_left = 36
stretch_margin_top = 36
stretch_margin_right = 36
stretch_margin_bottom = 36
texture_under = ExtResource("2_t4vfd")
texture_over = ExtResource("3_cvld6")
texture_progress = ExtResource("2_t4vfd")
tint_under = Color(0, 0, 0, 0.603922)
tint_progress = Color(0.964706, 0.709804, 0, 1)
radial_initial_angle = 215.0
radial_fill_degrees = 290.0

[node name="ResourceTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ResourceIconMargin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 3

[node name="ResourceIcon" type="TextureRect" parent="ResourceIconMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("4_vh8ym")

[node name="ResourceModifier" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 27

[node name="Modifier" type="RichTextLabel" parent="ResourceModifier"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_leyg0")
theme_override_font_sizes/normal_font_size = 0
text = "x1.0"
fit_content = true
autowrap_mode = 0
